# Lyricly

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  fetchLyrics.tsx  fetchLyricsResponse.tsx  lyrics.rs  main.rs  parseLyrics.tsx  romanizeLyrics.tsx
src-tauri/: Cargo.toml  musixmatch_session.json  tauri.conf.json
src-tauri/src/: detect_language.rs  discord_rpc.rs  fetch_lyrics.rs  fetch_media.rs  fetch_media_loop.rs  fetch_position.rs  fetch_position_loop.rs  lib.rs  lyrics.rs  main.rs  parse_lyrics.rs  romanize_japanese.rs  romanize_lyrics.rs
src/types/: LyricLine.tsx  LyricWord.tsx  LyricsResponse.tsx  Media.tsx  SubtitleLine.tsx
src/utils/: ConvertSubtitleLyrics.tsx  formatLyrics.tsx  getLineMs.tsx  updateDiscordRPC.tsx
