[package]
name = "lyricly"
version = "0.1.0"
description = "A Tauri App"
authors = ["KenoSone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lyricly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
reqwest = "0.13.3"
tokio = {version = "1.52.3", features = ["full"] }
windows = {version = "0.62.2", features = ["Media_Control", "Foundation", "Storage", "Storage_Streams"] }
musixmatch-inofficial = "0.4.0"
discord-rich-presence = "1.1.0"

